src/objects/Quotation__c.object
<CustomObject>
    <fields>
        <fullName>Project_Specific_Charges_Category_1__c</fullName>
        <label>Project Specific Charges Category 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Specific_Charges_Category_2__c</fullName>
        <label>Project Specific Charges Category 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Specific_Charges_Category_3__c</fullName>
        <label>Project Specific Charges Category 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Specific_Charges_Description_1__c</fullName>
        <label>Project Specific Charges Description 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Specific_Charges_Description_2__c</fullName>
        <label>Project Specific Charges Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Specific_Charges_Description_3__c</fullName>
        <label>Project Specific Charges Description 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Specific_Charges_ST_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Specific Charges ST 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Specific_Charges_ST_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Specific Charges ST 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Specific_Charges_ST_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Specific Charges ST 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Unit__c.Unit_Status__c</field>
                <operation>equals</operation>
                <value>Vacant</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Status__c</fullName>
        <label>Quote Status</label>
        <picklist>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_Charges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Registration Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ST_Token_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ST Token Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Saleable__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Saleable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Opp__c</fullName>
        <formula>TEXT(Opportunity__r.Sales_Manager__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Manager (Opportunity)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Remarks__c</fullName>
        <label>Offer Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Tax_On_Token_Amount__c</fullName>
        <formula>Project__r.Service_Tax_Required_On_Token_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tax On Token Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Total__c</fullName>
        <formula>(Premium_Charges_ST_1__c + 
Premium_Charges_ST_2__c + 
Premium_Charges_ST_3__c + 
Premium_Charges_ST_4__c + 
Project_Maintenance_Charges_ST_1__c + 
Project_Maintenance_Charges_ST_2__c + 
Project_Maintenance_Charges_ST_3__c + 
Project_Specific_Charges_ST_1__c + 
Project_Specific_Charges_ST_2__c + 
Project_Specific_Charges_ST_3__c + 
Legal_Charges_ST__c + 
Common_Area_Maintenance_ST__c + 
Club_Membership_ST__c + 
MVAT_ST_D__c + 
Utility_Charges_ST__c + 
Infrastructure_Charges_ST__c + 
X2_Yr_Advance_Maintenance_ST__c + 
Society_Formation_ST__c + 
Share_Money_ST__c + 
Agreement_Value_ST_D__c)</formula>
        <label>Service Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Taxes_Total_D__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Services Taxes total post discount</description>
        <label>Service Taxes Total (D)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Taxes_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Service TaxesTotal</description>
        <label>Service Taxes Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Share_Money_ST__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Share Money ST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Share_Money__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Share Money</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Single_Open_Additional__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Single- Dependent (Additional)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Single_Open_Earmarked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Single - Dependent (Earmarked)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Single_car_park_Additional__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Single - Independent (Additional)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Single_car_park_Earmarked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Single - Independent (Earmarked)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sinking_Charges__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sinking Charges</description>
        <label>Sinking Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Society_Charges_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Society Charges Total (sum total of Infra, Club, Common, Utility and any other charges bucket as society charges)</description>
        <label>Society Charges Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Society_Formation_ST__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Society Formation ST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Society_Formation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Society Formation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stack_Additional__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Puzzle (Additional)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stack_Earmarked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Puzzle (Earmarked)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty_D__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stamp Duty on Discounted Agreement Value</description>
        <label>Stamp Duty (D)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stamp Duty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty_and_Registration_Total_D__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stamp Duty and Registration Total post discount</description>
        <label>Stamp Duty and Registration Total (D)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty_and_Registration_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total (Stamp Duty and Registration)</description>
        <label>Stamp Duty and Registration Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subvention_Charge__c</fullName>
        <label>Subvention Charge</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tandem_Open_Additional__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stack (Additional)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tandem_Open_Earmarked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stack (Earmarked)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tandem_car_park_Additional__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dependable Stack (Additional)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tandem_car_park_Earmarked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dependable Stack (Earmarked)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Token_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Token Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Dependable_Stack__c</fullName>
        <formula>Tandem_car_park_Additional__c + Tandem_car_park_Earmarked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total  Dependable Stack</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Dependent__c</fullName>
        <formula>Single_Open_Additional__c +  Single_Open_Earmarked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Dependent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Discount_L__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Discount (L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Discount_PSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Discount (PSF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Type__c</fullName>
        <label>Total Discount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Independent__c</fullName>
        <formula>Single_car_park_Additional__c + Single_car_park_Earmarked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Independent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_New_Stack__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total New Stack</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Puzzle__c</fullName>
        <formula>Stack_Additional__c + Stack_Earmarked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Puzzle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Rate_Card_L__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Rate Card (L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Rate_Card_PSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Rate Card (PSF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Stack__c</fullName>
        <formula>Tandem_Open_Additional__c +  Tandem_Open_Earmarked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stack</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Two_wheeler__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Two wheeler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Two_Wheeler_Additional__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Two Wheeler (Additional)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Charges_ST__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Utility Charges ST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Charges__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Electric water and gas and any other utility related charges</description>
        <label>Utility Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_Till_Date__c</fullName>
        <description>validity of the quote</description>
        <label>Valid Till Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <label>View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wing__c</fullName>
        <label>Wing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Yr_Advance_Maintenance_ST__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2 Yr Advance Maintenance ST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_Yr_Advance_Maintenance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2 Yr Advance Maintenance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Quotation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Current_Approval_Status__c</columns>
        <columns>Level_One_Approver__c</columns>
        <columns>Level_Two_Approver__c</columns>
        <columns>Level_Three_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project__c</columns>
        <columns>Project_Unit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quotation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>